# maths

./: .gitignore  README.md
Maths/: CMakeLists.txt
Maths/include/Maths/: Maths.h  constants.h  functions.h  matrix.h  matrix3x3.h  matrix4x4.h  quaternion.h  vector.h
Maths/src/: Maths.cpp  diagonalMatrix.cpp  functions.cpp  identityMatrix.cpp  invertedProjectionMatrix.cpp  matrix3x3.cpp  matrix4x4.cpp  projectionMatrix.cpp  quaternion.cpp  rotationMatrix.cpp  rotationXMatrix.cpp  rotationYMatrix.cpp  rotationZMatrix.cpp  scaleMatrix.cpp  stereoscopicProjectionMatrix.cpp  translationMatrix.cpp  vector2.cpp  vector3.cpp  vector4.cpp
Maths/src/matrix4x4/: identityMatrix.cpp  invertedProjectionMatrix.cpp  matrix4x4.cpp  projectionMatrix.cpp  rotationMatrix.cpp  scaleMatrix.cpp  stereoscopicProjectionMatrix.cpp  translationMatrix.cpp
Maths/src/vector/: vector2.cpp  vector3.cpp  vector4.cpp
